adjusted script to run with/without docker, adjusted docker file slighlty, clean up

--- a/test/Dockerfile
+++ b/test/Dockerfile
@@ -1,11 +1,10 @@
-FROM python:3.8.5
+FROM jupyter/base-notebook
+#FROM python:3.8.5
 
 COPY . /app/
 
 WORKDIR /app
 
-RUN pip3 install -r requirements.txt
+RUN pip3 install --prefer-binary -r requirements.txt
 
-RUN python "./tmp/notebooks/housing-price-index-us.ipynb"
-
-RUN docker cp -a CONTAINER:/app/images /reports/figures
+CMD jupyter nbconvert --execute /app/tmp/notebooks/housing-price-index-us.ipynb --output-dir /app/
