--- a/housing-price-index-us/.gitignore
+++ b/housing-price-index-us/.gitignore
@@ -1,6 +1,9 @@
 # exclude data from source control by default
 /data/
 
+# test folder
+../test/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
